.run.log
  File ".last_tmp.py", line 102
    elif isinstance(card, MoneyCard):
                                    ^
IndentationError: unindent does not match any outer indentation level

